# breadlog

./: .gitignore  .readthedocs.yaml  Breadlog.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.Dockerfile
.github/workflows/: ci.yaml  release-please.yaml  test_with_coverage.bash
docs/: conf.py  index.rst
docs/source/: configuration.rst  directives.rst  excluding-statements.rst  getting-started.rst  known-limitations.rst  running-breadlog.rst  using-log-references.rst
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_rust_parser.rs
src/: lib.rs  main.rs  rustfmt.toml
src/codegen/: finder.rs  generate.rs  mod.rs
src/config/: context.rs  mod.rs
src/parser/: code_parser.rs  mod.rs  rust_grammar.pest  rust_parser.rs
tests/: commandline_test.rs
tests/rust_data/fib-rs/: Cargo.toml  breadlog-test-expected.yaml  breadlog.yaml
tests/rust_data/fib-rs/src/: fib-rs.rs
tests/rust_data/rocket/: CHANGELOG.md  Cargo.toml  README.md  breadlog-test-expected.yaml  breadlog.yaml
tests/rust_data/rocket/.github/ISSUE_TEMPLATE/: config.yml
tests/rust_data/rocket/.github/workflows/: ci.yml
tests/rust_data/rocket/benchmarks/: Cargo.toml
tests/rust_data/rocket/benchmarks/src/: routing.rs
tests/rust_data/rocket/contrib/db_pools/: README.md
tests/rust_data/rocket/contrib/db_pools/codegen/: Cargo.toml
tests/rust_data/rocket/contrib/db_pools/lib/: Cargo.toml
tests/rust_data/rocket/contrib/dyn_templates/: Cargo.toml  README.md
tests/rust_data/rocket/contrib/dyn_templates/src/: context.rs  fairing.rs  lib.rs  metadata.rs
tests/rust_data/rocket/contrib/dyn_templates/tests/: templates.rs
tests/rust_data/rocket/contrib/sync_db_pools/: README.md
tests/rust_data/rocket/contrib/ws/: Cargo.toml  README.md
tests/rust_data/rocket/contrib/ws/src/: lib.rs  websocket.rs
tests/rust_data/rocket/core/codegen/: Cargo.toml
tests/rust_data/rocket/core/codegen/src/: lib.rs
tests/rust_data/rocket/core/http/: Cargo.toml
tests/rust_data/rocket/core/lib/: Cargo.toml
tests/rust_data/rocket/examples/: Cargo.toml  README.md
tests/rust_data/rocket/examples/config/: Rocket.toml
tests/rust_data/rocket/examples/config/src/: main.rs
tests/rust_data/rocket/examples/cookies/src/: session.rs
tests/rust_data/rocket/examples/databases/: Cargo.toml  Rocket.toml
tests/rust_data/rocket/examples/databases/db/diesel/mysql-migrations/20210329150332_create_posts_table/: up.sql
tests/rust_data/rocket/examples/databases/src/: diesel_mysql.rs  diesel_sqlite.rs  main.rs  tests.rs
tests/rust_data/rocket/examples/forms/src/: main.rs
tests/rust_data/rocket/examples/forms/templates/: index.html.tera
tests/rust_data/rocket/examples/manual-routing/src/: main.rs
tests/rust_data/rocket/examples/static-files/src/: tests.rs
tests/rust_data/rocket/examples/tls/: Cargo.toml  Rocket.toml
tests/rust_data/rocket/examples/tls/private/: ecdsa_nistp256_sha256_key_sec1.pem  ecdsa_nistp384_sha384_key_sec1.pem  rsa_sha256_key.pem
tests/rust_data/rocket/examples/tls/src/: main.rs  redirector.rs  tests.rs
tests/rust_data/rocket/examples/todo/: Cargo.toml
tests/rust_data/rocket/examples/todo/src/: main.rs  task.rs
tests/rust_data/rocket/examples/upgrade/: Cargo.toml
tests/rust_data/rocket/examples/upgrade/src/: main.rs
tests/rust_data/rocket/examples/upgrade/static/: index.html
tests/rust_data/rocket/scripts/: config.sh  mk-docs.sh  test.sh
tests/rust_data/rocket/site/: index.toml
tests/rust_data/rocket/site/guide/: 01-upgrading.md  10-pastebin-tutorial.md  12-faq.md  2-getting-started.md  4-requests.md  5-responses.md  6-state.md  7-fairings.md  9-configuration.md  index.md
tests/rust_data/rocket/site/news/: 2018-12-08-version-0.4.md  2022-05-09-version-0.5-rc.2.md  2023-03-23-version-0.5-rc.3.md  index.toml
tests/rust_data/rocket/site/tests/: Cargo.toml
(+128 files in other folders)
