[package]
name = "breadlog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chomp = "0.3.1"
serde_yaml = "0.8.26"
serde = { version = "1.0.140", features = ["derive"] }
clap = { version = "3.2.15", features = ["derive"] }
log = "0.4.17"
simple_logger = "2.2.0"
tempfile = "3.3.0"