[package]
name = "breadlog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.2.1"
pest_derive = "2.2.1"
serde_yaml = "0.8.26"
serde = { version = "1.0.140", features = ["derive"] }
clap = { version = "3.2.15", features = ["derive"] }
log = "0.4.17"
simple_logger = "2.2.0"
tempfile = "3.3.0"
futures = "0.3"
async-std = { version = "1.12.0", features = ["attributes"] }
regex = "1.7.1"
lazy_static = "1.4.0"
test-log = "0.2.11"
env_logger = "0.10.0"
walkdir = "2"
tempdir = "0.3.7"
signal-hook = "0.3.15"