[package]
name = "breadlog"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "breadlog"
path = "src/main.rs"

[dependencies]
pest = {version = "2.6.0" }
pest_derive = "2.6.0"
serde_yaml = "0.9"
serde = { version = "1.0.140", features = ["derive"] }
clap = { version = "4.4.6", features = ["derive"] }
log = "0.4.17"
simple_logger = "2.2.0"
tempfile = "3.3.0"
futures = "0.3"
async-std = { version = "1.12.0", features = ["attributes"] }
regex = "1.10.0"
lazy_static = "1.4.0"
test-log = "0.2.11"
walkdir = "2"
tempdir = "0.3.7"
signal-hook = "0.3.15"
testing_logger = "0.1.1"
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
async-trait = "0.1.71"
tracing = "0.1"
value-bag = "1.4.1"

[dev-dependencies]
env_logger = "0.10.0"
tracing-test = "0.2"
test_bin = "0.4"
copy_dir = "0.1"
regex = "1.10.0"