[workspace]
resolver = "2"
members = [
  "config",
  "cookies",
  "databases",
  "error-handling",
  "fairings",
  "forms",
  "hello",
  "manual-routing",
  "responders",
  "serialization",
  "state",
  "static-files",
  "templating",
  "testing",
  "tls",
  "upgrade",

  "pastebin",
  "todo",
  "chat",
]
