[package]
name = "rocket_ws"
version = "0.1.0-rc.3"
authors = ["Sergio Benitez <sb@sergio.bz>"]
description = "WebSocket support for Rocket."
documentation = "https://api.rocket.rs/v0.5-rc/rocket_ws/"
homepage = "https://rocket.rs"
repository = "https://github.com/SergioBenitez/Rocket/tree/master/contrib/ws"
readme = "README.md"
keywords = ["rocket", "web", "framework", "websocket"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.56"

[features]
default = ["tungstenite"]
tungstenite = ["tokio-tungstenite"]

[dependencies]
tokio-tungstenite = { version = "0.19", optional = true }

[dependencies.rocket]
version = "=0.5.0-rc.3"
path = "../../core/lib"
default-features = false

[package.metadata.docs.rs]
all-features = true
