[package]
name = "databases"
version = "0.0.0"
workspace = "../"
edition = "2021"
publish = false

[dependencies]
rocket = { path = "../../core/lib", features = ["json"] }
diesel = "2"
diesel_migrations = "2"

[dependencies.sqlx]
version = "0.6.0"
default-features = false
features = ["macros", "offline", "migrate"]

[dependencies.rocket_db_pools]
path = "../../contrib/db_pools/lib/"
features = ["sqlx_sqlite", "diesel_mysql"]

[dependencies.rocket_sync_db_pools]
path = "../../contrib/sync_db_pools/lib/"
features = ["diesel_sqlite_pool", "sqlite_pool"]
